# GuessTheNumberQT

./: .gitignore  CMakeLists.txt  README.md
client/: Client.cpp  Client.hpp  client  main_client.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
exception/: Exception.cpp  Exception.hpp
interfaces/: IServer.hpp
server/: Player.cpp  Player.hpp  Server.cpp  Server.hpp  main_server.cpp  server.cpp  server.hpp
src/JSON/: JSONPacket.cpp  JSONPacket.hpp
src/exception/: Exception.cpp  macro.hpp
src/interfaces/: IServer.hpp
tests/: unit_tests
tests/other/: test_exception.cpp
